--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic~=1.4.2
 click==7.1.2
 dnspython==1.16.0
 email-validator==1.1.1
@@ -5,7 +6,7 @@ Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
-idna==2.9
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
@@ -15,3 +16,4 @@ SQLAlchemy==1.3.18
 text-unidecode==1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
+
